--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "require": {
         "php":                             ">=5.3.3",
 
-        "sylius/rbac":                     "0.15.*@dev",
-        "sylius/resource-bundle":          "0.15.*@dev",
+        "sylius/rbac":                     "0.16.*",
+        "sylius/resource-bundle":          "0.16.*",
         "symfony/framework-bundle":        "~2.3",
         "doctrine/doctrine-cache-bundle":  "~1.0"
     },
@@ -41,9 +41,10 @@
     "autoload-dev": {
         "psr-4": { "Sylius\\Bundle\\RbacBundle\\spec\\": "spec/" }
     },
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.15-dev"
+            "dev-master": "0.16-dev"
         }
     }
 }
