--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": "^5.5.9|^7.0",
 
         "doctrine/doctrine-cache-bundle": "~1.0",
         "sylius/rbac": "0.16.*",
