--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "php": "^5.5.9|^7.0",
 
         "doctrine/doctrine-cache-bundle": "~1.0",
-        "sylius/rbac": "0.18.*",
-        "sylius/resource-bundle": "0.18.*",
+        "sylius/rbac": "^0.18",
+        "sylius/resource-bundle": "^0.18",
         "symfony/framework-bundle": "^2.7.7"
     },
     "require-dev": {
